--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
-    //gsm
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    //MP
+    implementation 'com.mercadopago.android.px:checkout:4.+'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
